--- a/css/foundation.css
+++ b/css/foundation.css
@@ -52,7 +52,10 @@ body {
 
 /***********************   CUSTOM   *********************************/
 .banner {
-  color: white;
+  max-width:100%;
+  max-height:100%;
+  display: block;
+  text-align: center;
 }
 
 .radios label {
@@ -63,6 +66,9 @@ span.prayer {
   margin-left: 5px;
 }
 
+.centre {
+  text-align: center;
+}
 .body {
   background: white;
 }
