--- a/css/foundation.css
+++ b/css/foundation.css
@@ -81,6 +81,7 @@ span.prayer {
   padding: 15px 20px 5px 15px;
   border-radius: 5px;
   margin-bottom: 15px;
+  margin: 25px;
 }
 .quote:after {
   content: '';
